--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
    <body style="background-color:rgb(127, 178, 210);">
-      <h1>Welcome to K8S world  prod </h1>
+      <h1>Welcome too K8S world  prod </h1>
    </body>
 </html>
